--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,7 @@ jobs:
             DEBUG=True
             FOO=bar
           include: |
+            index.js
             package.json
           exclude: |
             **/*.ts
