feat: added nodemailer

--- a/package.json
+++ b/package.json
@@ -11,14 +11,16 @@
     "url": "git+https://github.com/kamenskiyyyy/just-study-notification-center.git"
   },
   "dependencies": {
-    "aws-sdk": "2.1252.0"
+    "aws-sdk": "2.1252.0",
+    "nodemailer": "^6.8.0"
   },
   "devDependencies": {
     "@semantic-release/commit-analyzer": "9.0.2",
     "@semantic-release/git": "10.0.1",
     "@semantic-release/release-notes-generator": "10.0.3",
-    "semantic-release": "19.0.5",
     "@types/node": "18.11.9",
+    "@types/nodemailer": "^6.4.6",
+    "semantic-release": "19.0.5",
     "typescript": "4.8.4"
   }
 }
