--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,6 +7,8 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    environment:
+      name: prod
 
     steps:
       - uses: actions/checkout@v3
@@ -30,8 +32,10 @@ jobs:
           memory: 256Mb
           entrypoint: dist/index.handler
           environment: |
-            DEBUG=True
-            FOO=bar
+            MAIL_HOST=${{ secrets.MAIL_HOST }}
+            MAIL_PORT=${{ secrets.MAIL_PORT }}
+            MAIL_USER=${{ secrets.MAIL_USER }}
+            MAIL_PASS=${{ secrets.MAIL_PASS }}
           include: |
             ./dist
             package.json
