--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.3.0",
   "main": "index.js",
   "scripts": {
-    "test": "AWS_ACCESS_KEY_ID=YCAJEtgELMn1y8UxCmk_d03Ou AWS_SECRET_ACCESS_KEY=YCO3enqnTvg84f48u958wm50BeiVkui8PmqJ7_DS node message.js",
+    "test": "node message.js",
     "build": "npx tsc -b ."
   },
   "repository": {
