--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,4 +43,4 @@ jobs:
           exclude: |
             **/*.ts
           tags: |
-            ${{ GITHUB_SHA::6 }}
+            ${{ github.sha }}
