--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,16 @@
 {
   "compilerOptions": {
     "outDir": "./dist",
-    "lib": ["es5", "es6", "es2019"],
+    "lib": ["dom", "esnext"],
     "target": "es2019",
-    "module": "commonjs",
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
-    "experimentalDecorators": true
+    "experimentalDecorators": true,
+    "allowSyntheticDefaultImports": true,
+    "jsx": "react",
+    "types": ["node"],
+    "module": "commonjs",
+    "esModuleInterop": true
   },
   "include": [
     "src/**/*"
