--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,5 +41,6 @@ jobs:
           include: |
             ./dist
             package.json
+            package-lock.json
           exclude: |
             **/*.ts
