--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "url": "git+https://github.com/kamenskiyyyy/just-study-notification-center.git"
   },
   "dependencies": {
-    "@keystone-6/fields-document": "5.0.1",
+    "@keystone-6/document-renderer": "^1.1.1",
     "nodemailer": "^6.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -21,9 +21,9 @@
     "@semantic-release/release-notes-generator": "10.0.3",
     "@types/node": "18.11.9",
     "@types/nodemailer": "^6.4.6",
-    "semantic-release": "19.0.5",
-    "typescript": "4.8.4",
     "@types/react": "^18.0.25",
-    "@types/react-dom": "^18.0.8"
+    "@types/react-dom": "^18.0.8",
+    "semantic-release": "19.0.5",
+    "typescript": "4.8.4"
   }
 }
