--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.7.4",
   "main": "index.js",
   "scripts": {
-    "build": "npx tsc -b ."
+    "build": "npx tsc"
   },
   "repository": {
     "type": "git",
@@ -11,7 +11,6 @@
   },
   "dependencies": {
     "@keystone-6/document-renderer": "^1.1.1",
-    "bootstrap": "^5.2.2",
     "nodemailer": "^6.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
