fix: added styles to deploy

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,6 +40,7 @@ jobs:
             MAIL_PASS=${{ secrets.MAIL_PASS }}
           include: |
             ./dist
+            styles
             package.json
             package-lock.json
           exclude: |
