--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,5 @@
 {
   "compilerOptions": {
-    "baseUrl": "./src",
     "outDir": "./dist",
     "lib": ["dom", "dom.iterable", "esnext"],
     "target": "esnext",
@@ -15,7 +14,7 @@
     "allowJs": false,
     "skipLibCheck": false,
   },
-  "include": ["**/*.ts", "**/*.tsx"],
+  "include": ["src/**/*.ts", "src/**/*.tsx"],
   "exclude": [
     "node_modules",
   ]
