--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.7.7",
   "main": "index.js",
   "scripts": {
-    "build": "npx tsc"
+    "build": "npx tsc -b ."
   },
   "repository": {
     "type": "git",
