--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
           node-version: 18
       - name: Install dependencies
         run: npm ci
-      - run: npm run build --if-present
+      - run: npm run build-webpack
 
       - name: Deploy Function
         id: sls-func
