--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.7.10",
   "main": "index.js",
   "scripts": {
-    "build": "npx tsc -b .",
-    "build-webpack": "webpack"
+    "build": "npx tsc -b ."
   },
   "repository": {
     "type": "git",
@@ -12,11 +11,9 @@
   },
   "dependencies": {
     "@keystone-6/document-renderer": "^1.1.1",
-    "node-polyfill-webpack-plugin": "^2.0.1",
     "nodemailer": "^6.8.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "ts-loader": "^9.4.1"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@semantic-release/commit-analyzer": "9.0.2",
@@ -27,11 +24,6 @@
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
     "semantic-release": "19.0.5",
-    "typescript": "4.8.4",
-    "webpack": "^5.75.0",
-    "webpack-cli": "^4.10.0"
-  },
-  "browser": {
-    "crypto": false
+    "typescript": "4.8.4"
   }
 }
