--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
     "jsx": "react",
-    "types": ["node"],
+    "types": ["node", "react"],
     "module": "commonjs",
   },
   "include": [
